2009-09-26 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, lfowidget.*, arpwidget.*, seqdriver.*, arpdata.*: 
	new load/save/saveAs logic adapted from Guido's implementation in 
	qmidiroute started
	* seqdriver.cpp: some optimization for LFO data queueing
	* midiarp.cpp: fixed: repeatPatternMode "down" didn't work with chords
	in pattern, a bug from original version I think (spotted by Robert 
	Dietrich)
	* midilfo.cpp: fixed uninitialized isMuted state

2009-09-25 Frank Kober <goemusic@yahoo.fr>
	* lfoscreen.cpp: max number of divisor separators limited to 64
	* seqdriver.cpp: mute state of midilfo now handled, muting gets active 
	only after a completed LFO cycle

2009-09-24 Frank Kober <goemusic@yahoo.fr>
	* midilfo.cpp: fixed triangle waveform in terms of length
	* lfoscreen.*: new class for waveform display added
	* lfowidget.*: lfoscreen added and updated on every parameter change
	* seqdriver.cpp: fixed missing initial echo request when no 
	LFO present
	
2009-09-23 Frank Kober <goemusic@yahoo.fr>
	* MIDI LFO added as new feature. GUI-wise LFOs coexist with Arps in 
	tabwidget. They are handeled in parallel through arpdata.cpp and are
	using the same queue as the arps. Each LFO outputs MIDI controller 
	data in adjustable resolution, waveform, amplitude, table length.  
	* midilfo.*, lfowidget.*, lfoadd.xpm: added
	* arprename.xpm, arpremove.xpm: changed since they are used for arps
	and LFOs.
	* arpdata.*: add midiLfoList in parallel to midiArpList
	* seqdriver.* : LFO data requesting and queueing added
	* mainwindow.* : LFO handling added, load/save routines adapted
	* TODO *: 
	Widgets in the tabwidget are currently recognized by their name
	to distinguish between LFO and Arp. A better solution would be nice.
	LFO Amp offset slider has no function yet
	LFO mute has no function yet
	LFO GUI needs improvement
	implement Guido's file change monitoring/Load/Save/SaveAs

2009-09-22 Guido Scholz <guido.scholz@bayernline.de>